third session files

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 	<title>JS Cardio</title>
 </head>
 <body>
-	<script type="text/javascript" src="script.js" defer></script>
+	<script type="text/javascript" src="script_3.js" defer></script>
 </body>
 </html>
